force-app/main/default/objects/Document__c/fields/Document_Order__c.field-meta.xml
<CustomField>
    <fullName>Document_Order__c</fullName>
    <label>Document Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>