force-app/main/default/objects/Document__c/fields/DocumentList__c.field-meta.xml
<CustomField>
    <fullName>DocumentList__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document List</label>
    <referenceTo>DocumentList__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>