force-app/main/default/objects/Document__c/fields/DocumentListItem__c.field-meta.xml
<CustomField>
    <fullName>DocumentListItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document List Item</label>
    <referenceTo>DocumentListItem__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>