force-app/main/default/objects/Document__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <formula>IF(NOT(ISBLANK(ValidityEndDate__c)), TODAY() &gt; ValidityEndDate__c , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsExpired</label>
    <type>Checkbox</type>
</CustomField>