force-app/main/default/objects/Document__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Represents the record Id to which the document is related.</description>
    <inlineHelpText>Represents the record Id to which the document is related.</inlineHelpText>
    <label>RecordId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>