force-app/main/default/objects/Document__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Huge file size</fullName>
            </value>
            <value>
                <fullName>Not signed</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
            <value>
                <fullName>Unreadable</fullName>
            </value>
            <value>
                <fullName>Not accepted</fullName>
            </value>
            <value>
                <fullName>Bad quality</fullName>
            </value>
            <value>
                <fullName>Censored</fullName>
            </value>
            <value>
                <fullName>Language not supported</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Corrupt - cannot be opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>