force-app/main/default/objects/Document__c/fields/ValidityEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityEndDate__c</fullName>
    <label>ValidityEndDate</label>
    <type>Date</type>
</CustomField>