force-app/main/default/objects/Document__c/fields/ValidityStartDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityStartDate__c</fullName>
    <label>ValidityStartDate</label>
    <type>Date</type>
</CustomField>