force-app/main/default/objects/Document__c/validationRules/Link_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Link_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Status__c) || ISCHANGED(Link__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(Status__c))) &amp;&amp;
NOT(ISPICKVAL(Status__c, &apos;Missing&apos;)) &amp;&amp;
ISBLANK(Link__c)</errorConditionFormula>
    <errorDisplayField>Link__c</errorDisplayField>
    <errorMessage>Link is mandatory.</errorMessage>
</ValidationRule>