force-app/main/default/objects/Document__c/validationRules/Mandatory_Rejected_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Rejected_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Status__c) || ISCHANGED( Rejected_Reason__c )) &amp;&amp;
ISPICKVAL(Status__c, &apos;Rejected&apos;) &amp;&amp;
ISBLANK(TEXT(Rejected_Reason__c))</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>Rejected Reason is Mandatory</errorMessage>
</ValidationRule>