force-app/main/default/objects/Document__c/validationRules/Verify_Validity_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Validity_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED( ValidityStartDate__c ) || ISCHANGED(  ValidityEndDate__c ) ) &amp;&amp; 
NOT(ISBLANK(ValidityStartDate__c )) &amp;&amp;
NOT(ISBLANK(ValidityEndDate__c )) &amp;&amp;
( ValidityEndDate__c &lt; ValidityStartDate__c )</errorConditionFormula>
    <errorMessage>Validity start date must be prior to validity end date.</errorMessage>
</ValidationRule>